--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,8 @@
     
 }
 
+/* Estilos para Computadora 1200px*/
+
 /* Navegador e hipervinculos */
 li{
     list-style: none;
@@ -23,7 +25,7 @@ a{
 }
 
 body{
-    padding: 10px 100px;
+    padding: 0.83% 8.33%;
     background-color: rgb(241, 241, 230);
 }
 
@@ -51,6 +53,9 @@ nav{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    margin-top: 7.53%;
+    margin-bottom: 7.53%;
+    padding-left: 18.75%;
 }
 
 .ir_form{
@@ -58,7 +63,7 @@ nav{
 }
 
 .ul_ir_form{
-    padding-right: 40px;
+    padding-right: 13.55%;
 }
 
 #logo{
@@ -89,11 +94,11 @@ main{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    margin-bottom: 50px;
+    margin-bottom: 7.26%;
 }
 
 img{
-    width: 150px;
+    width: 59.2%;
 }
 
 .article_productos{
@@ -102,8 +107,8 @@ img{
     display: flex;
     flex-direction: column; 
     align-items: center;    
-    padding-left: 25px;
-    padding-right: 25px;
+    padding-left: 3.80%;
+    padding-right: 3.80%;
 }
 
 .titulo{
@@ -112,27 +117,36 @@ img{
 
 h2{
     font-weight: bold;
-    color: #2F393B;    
+    color: #2F393B; 
+    margin-top: 3%;
+    margin-bottom: 3%;  
+    margin-left: 3%; 
 }
 
 h4{
     font-weight: bold;
     color: #2F393B;
+    margin-top: 7.80%;
+    margin-bottom: 7.80%;
 }
 
 .precio{
     color:  rgb(0, 0, 0);;
     font-weight: bold;
+    margin-bottom: 5.95%;
+    margin-top: 5.95%;
 }
 
 .descrip_prod{
     text-align: center;
+    margin-bottom: 5.95%;
+    margin-top: 5.95%;
 }
 
 .verDetalle{
     color: white;
     background-color:  rgb(169, 177, 160);;
-    padding: 10px;
+    padding: 3.70%;
     border-radius: 5px;
 }
 
@@ -208,10 +222,11 @@ h3{
     margin-top: 0px;
     font-weight: bolder;
     color: #2F393B;
+    margin-bottom: 7.5%;
 }
 
 aside{
-    padding: 20px;
+    padding: 2.03%;
     width: 30%;
     background-color: rgb(255, 255, 255);
 }
@@ -222,9 +237,16 @@ aside{
 }
 
 .li_aside{
-    margin-bottom: 10px;
+    margin-bottom: 3.92%;
+    margin-left: 2.45%;
+    margin-right: 2.45%;
 }
 
+.ulAside{
+    padding-left: 16.2%;
+    margin-top: 6.5%;
+    margin-bottom: 6.5%;
+}
 
 
 /* FOOTER */
@@ -243,6 +265,8 @@ footer{
 .p_footer{
     color: white;
     font-weight: bold;
+    margin-top: 1.77%;
+    margin-bottom: 1.77%;
 }
 
 
@@ -267,4 +291,22 @@ footer{
 
 .boton{
     color: #ffffff;
+}
+
+
+/* Estilos para Tablet 768px*/
+
+@media (max-width:768px) {
+
+
+
+}
+
+
+/* Estilos para Celular 420px*/
+
+@media (max-width:420px) {
+
+
+    
 }
