--- a/css/styles.css
+++ b/css/styles.css
@@ -205,8 +205,12 @@ h4{
 }
 
 h3{
-    font-weight: bolder;
+    font-weight: bold;
     color: #2F393B;
+    font-size: 22px;
+    margin-top: 3%;
+    margin-bottom: 3%;  
+    margin-left: 3%; 
 }
 
 .art_comentarios{
